--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
                 android:value=".MainActivity" />
         </activity>
         <activity android:name=".Registration" />
-        <activity android:name=".Home"></activity>
+        <activity
+            android:name=".Home"
+            android:screenOrientation="portrait" />
+        <activity android:name=".Streamer" />
     </application>
 
 </manifest>
