Lecture de playlist complète

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         <activity android:name=".Home" />
         <activity
             android:name=".Streamer"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
+        <activity android:name=".PlaylistDisplay"></activity>
     </application>
 
 </manifest>
