--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,8 +51,9 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
-        <activity android:name=".addSongToPlaylist"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity android:name=".addSongToPlaylist" />
+        <activity android:name=".ShareSong"></activity>
     </application>
 
 </manifest>
